--- a/trunk/wp-content/themes/Pleng/css/screen.css
+++ b/trunk/wp-content/themes/Pleng/css/screen.css
@@ -2305,6 +2305,11 @@ strong.header
 	-moz-box-shadow: 0 1px 5px #ccc;
  	-webkit-box-shadow: 0 1px 5px #ccc;
  	box-shadow: 0px 1px 5px #ccc;
+
+
+
+
+
 }
 
 .tagline h2
@@ -2514,8 +2519,7 @@ strong.header
 	position: absolute;
 	background: transparent url('../images/000_80.png') repeat;
 	bottom: 0px;
-	padding: 7px 10px 7px 10px;
-/*	padding: 10px 15px 10px 15px;*/
+	padding: 20px 15px 20px 15px;
 	overflow: hidden;
 	width:130px;
 	text-align: center;
@@ -2524,7 +2528,7 @@ strong.header
 .kwicks_title h6
 {
 	color: #fff;
-	font-size: 13px;
+	font-size: 14px;
 }
 
 .kwicks_title_large h4
@@ -2538,9 +2542,9 @@ strong.header
 	position: absolute;
 	background: transparent url('../images/000_80.png') repeat;
 	bottom: 0px;
-	padding: 3px 15px 3px 15px;
-/*	padding: 20px 15px 20px 15px;*/
+	padding: 20px 15px 20px 15px;
 	display: none;
+        height: 20px;
 }
 
 /*
@@ -2669,3 +2673,20 @@ strong.header
 	height: 160px;
 	padding-top: 0;
 }
+
+.template_shoutbox
+{
+    width: 450px;
+    float: left;
+}
+
+.template_lienhe
+{
+    width: 420px;
+    float: right;
+    margin-left: 10px;
+}
+
+.template_shoutbox li { display:block;}
+
+.template_lienhe li{ display:block;}
